Fixed a few bugs related to the selection event Added an example of mouse drag, and an example of mouse zoom with preview (julien.epiney) Redraw now works on IE8 Standards mode

--- a/flotr/playground/style.css
+++ b/flotr/playground/style.css
@@ -157,7 +157,7 @@ label.active {
 
 fieldset,legend {
   border: 1px solid #999;
-  padding: 3px;
+  padding: 5px;
   -moz-border-radius: 4px 4px;
   border-radius: 4px;
   -webkit-border-radius: 4px;
